
2020-10-13  Simon Sobisch <simonsobisch@gnu.org>

	* gnucobol.texi: remove node structuring that is identical to default

2020-09-28  James K. Lowden  <jklowden@symas.com>

	* cbrunt.tex.gen: adjust for changed runtime.cfg

2020-09-23  James K. Lowden  <jklowden@symas.com>

	* cbhelp.tex.gen: formatting improvements

2019-09-22  Simon Sobisch <simonsobisch@gnu.org>

	* Makefile.am: reordered targets, pass $AWK to cobcinfo.sh,
	  added awk depenencies
	* cobcinfo.sh: optionally use awk binary specified by $AWK,
	  cleanup

2020-09-22  James K. Lowden  <jklowden@symas.com>

	* cbintr.awk.gen, cbrunt.tex.gen, cbhelp.tex.gen: new scripts
	* cobcinfo.sh (_create_file): generate cbintr.tex, cbrunt.tex using awk
	* Makefile.am (dist_noinst_SCRIPTS): added new scripts

2020-09-04  James K. Lowden  <jklowden@symas.com>

	* Makefile.am: generate documentation from build-tree versions
	* gnucobol.texi: cleanup formatting problems

2020-06-15  Simon Sobisch <simonsobisch@gnu.org>

	* gnucobol.texi: update for warning options -Wextra/-W, -Wadditional
	  and integrated some parts of the GCC manual concerning warning related
	  options that are in GnuCOBOL for quite some time
	* gnucobol.texi: update concerning the -std and friends

2019-08-15  Simon Sobisch <simonsobisch@gnu.org>

	* cobcinfo.sh (_create_file): cut down creation-time of tex-includes
	  by 98% by using read to split into separate parts
	* cobcinfo.sh: optionally use sed binary specified by $SED
	* Makefile.am: pass $SED to cobcinfo.sh
	* cobcinfo.sh: added TAIL_START/TAIL_LAST to allow overriding tail
	  invocation for non-posix systems

2019-06-06  Simon Sobisch <simonsobisch@gnu.org>

	* Makefile.am: adjusted dependencies for latest changes

2019-05-22  Simon Sobisch <simonsobisch@gnu.org>

	* cobcinfo.sh: completely adjusted the generation of the appendices
	  (tex-includes) to not copy the output of cobc/cobcrun verbatim
	  but to create readable tables with texinfo commands instead