@@ -176,10 +176,11 @@ Appendices
 * Appendix C                    Intrinsic Functions
 * Appendix D                    System routines
 * Appendix E                    System names
-* Appendix F                    Compiler Configuration
-* Appendix G                    Module loader @command{cobcrun} options
-* Appendix H                    Runtime configuration
-* Appendix I                    GNU Free Documentation License
+* Appendix F                    Exception names
+* Appendix G                    Compiler Configuration
+* Appendix H                    Module loader @command{cobcrun} options
+* Appendix I                    Runtime configuration
+* Appendix J                    GNU Free Documentation License
 
 @end detailmenu
 @end menu
@@ -323,6 +324,10 @@ No further actions will be taken except for further display options.
 
 @item --list-mnemonics
 Display mnemonic names (@pxref{Appendix E}).
+No further actions will be taken except for further display options.
+
+@item --list-exceptions
+Display exception names (@pxref{Appendix F}).
 No further actions will be taken except for further display options.
 
 @end table
@@ -571,7 +576,7 @@ The compiler uses many dialect specific options. These may be set via a defined
 dialect by @option{-std=}, a configuration file by @option{-conf=} or by using the
 single dialect flags directly.
 
-@xref{Appendix F, Compiler Configuration, Compiler Configuration}, and @file{config/*.conf}.
+@xref{Appendix G, Compiler Configuration, Compiler Configuration}, and @file{config/*.conf}.
 
 Note concerning the defined dialects: The GnuCOBOL compiler tries to limit both the
 feature-set and reserved words to the specified compiler when the "strict" dialects
@@ -785,11 +790,22 @@ compilation group:
 
 @table @code
 
-@item -debug, -d
-Enable all run-time error checks.
-
 @item -g
 Produce C debugging information in the output.
+
+@item --debug, -d
+Enable all run-time error checks.
+
+@item -fec=exception-name, -fno=ec=exception-name
+Enable/disable specified exception checks,
+@pxref{Appendix F, Exception Names, Exception Names}.
+
+@item -fsource-location
+Generate source location code (implied by @option{-debug}, @option{-g} and
+@option{-fec}); @option{-debug} implies @option{-fec=ALL}.
+
+@item -fstack-check
+Enable @code{PERFORM} stack checking (implied by @option{-debug} or @option{-g}).
 
 @item -ftrace
 Generate trace code (log executed procedures, if tracing is enabled).
@@ -797,12 +813,6 @@ Generate trace code (log executed procedures, if tracing is enabled).
 @item -ftraceall
 Generate trace code (log executed procedures and statements,
 if tracing is enabled).
-
-@item -fsource-location
-Generate source location code (implied by @option{-debug} or @option{-g}).
-
-@item -fstack-check
-Enable @code{PERFORM} stack checking (implied by @option{-debug} or @option{-g}).
 
 @item -fdebugging-line
 Enable debugging lines (@code{D} in indicator column; >>D directive).
@@ -972,7 +982,7 @@ to your library directory, and run the main program:
 $ export COB_LIBRARY_PATH=/your/cobol/lib
 @end example
 (@emph{Please notice:} You may set the variable via a runtime configuration file,
-@pxref{Appendix H, Runtime Configuration, Runtime Configuration}.
+@pxref{Appendix I, Runtime Configuration, Runtime Configuration}.
 You may also set the variable to directly point to the directory
 where you compiled the sources.)
 
@@ -1374,7 +1384,7 @@ For displaying the current runtime settings you can use the option
 @option{-r}, @option{--runtime-env} of @command{cobcrun}.
 
 For a complete list of runtime variables, aliases, their default values and options
-to set them @pxref{Appendix H, Runtime Configuration, Runtime Configuration}.
+to set them @pxref{Appendix I, Runtime Configuration, Runtime Configuration}.
 
 @node Optimize, Debug, Customize, Top
 @chapter Optimize
@@ -1760,7 +1770,7 @@ When it is off, typed characters type over existing characters.
 Note: The insert mode is ignored for fields with a size of 1.
 
 The insert mode can also be changed by the @code{COB_INSERT_MODE} setting at any time,
-@pxref{Appendix H, Runtime Configuration, Runtime Configuration}.
+@pxref{Appendix I, Runtime Configuration, Runtime Configuration}.
 
 
 @subsection Tab keys
@@ -2337,10 +2347,11 @@ is not available on the current system.
 * Appendix C::                  Intrinsic Functions
 * Appendix D::                  System routines
 * Appendix E::                  System names
-* Appendix F::                  Compiler Configuration
-* Appendix G::                  Module loader @command{cobcrun} options
-* Appendix H::                  Runtime configuration
-* Appendix I::                  GNU Free Documentation License
+* Appendix F::                  Exception names
+* Appendix G::                  Compiler Configuration
+* Appendix H::                  Module loader @command{cobcrun} options
+* Appendix I::                  Runtime configuration
+* Appendix J::                  GNU Free Documentation License
 @end menu
 
 @node Appendix A, Appendix B, Appendices, Appendices
@@ -2394,13 +2405,25 @@ by their type.
 @include cbmnem.tex
 
 @node Appendix F, Appendix G, Appendix E, Appendices
+@appendix Exception names
+
+The following list of exception names was extracted from
+@code{cobc --list-exceptions} and shows the exception names and
+if those are fatal (lead to a program abort).
+
+All of those can be activated and deactivated, both directly and
+at group level, using @option{-fec}.
+
+@include cbexceptions.tex
+
+@node Appendix G, Appendix H, Appendix F, Appendices
 @appendix Compiler Configuration
 
 The following list was extracted from @file{config/default.conf}.
 
 @verbatiminclude cbconf.tex
 
-@node Appendix G, Appendix H, Appendix F, Appendices
+@node Appendix H, Appendix I, Appendix G, Appendices
 @appendix Module loader @command{cobcrun} options
 
 The following list of options was extracted from
@@ -2409,7 +2432,7 @@ for the module loader with a short description.
 
 @include cbchelp.tex
 
-@node Appendix H, Appendix I, Appendix G, Appendices
+@node Appendix I, Appendix J, Appendix H, Appendices
 @appendix Runtime configuration
 
 The following list was extracted from @file{config/runtime.cfg}.
@@ -2417,7 +2440,7 @@ The following list was extracted from @file{config/runtime.cfg}.
 @include cbrunt.tex
 
 @comment The full FDL 1.3 text
-@node Appendix I, , Appendix H, Appendices
+@node Appendix J, , Appendix I, Appendices
 @appendix GNU Free Documentation License
 @cindex Copying
 
